# fundamentos-bot

./: .env.EXAMPLE  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/algo1_bot/: __init__.py  bot.py  config.py  gcp.py
src/algo1_bot/commands/: base_cog.py  general.py  spreadsheet.py
src/algo1_bot/gcp/: __init__.py  spreadsheet_manager.py  token_manager.py
src/fundamentos_bot/: __init__.py  bot.py
src/fundamentos_bot/commands/: general.py  spreadsheet.py
src/fundamentos_bot/gcp/: __init__.py  spreadsheet_manager.py  token_manager.py
