[project]
name = "algo1-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manuel Sanchez", email = "manuelsfdelavega@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bot = "algo1_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
